# Qt

./: README.md  day06.rar  day07.rar
Project/Dashboard/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  pic.qrc
Project/Weather/: widget.cpp  widget.ui
Project/build-login-Desktop_Qt_5_14_2_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
Project/build-login-Desktop_Qt_5_14_2_MinGW_64_bit-Release/release/: moc_widget.cpp  qrc_qss.cpp
Project/login/: main.cpp  widget.cpp  widget.ui
Project/music-wwy-master/MusicOfWYY/: MusicOfWYY.pro  allmain.cpp  allmain.h
QML/1-QMLTest/: 1-QMLTest.cbp  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.qml
QML/1-QMLTest/1-QMLTest_autogen/: moc_predefs.h
Qt-Clion/1Hello/: CMakeLists.txt  main.cpp
Qt-Clion/2MyWidget/: main.cpp  mywidget.cpp  mywidget.h
Qt-Clion/DAY01-signals and slots/2MyWidget/: mywidget.h
Qt-Clion/DAY01-signals and slots/3MyPushButton/: CMakeLists.txt  main.cpp  mypushbutton.cpp
Qt-Clion/DAY01-signals-and-slots/3MyPushButton/: mypushbutton.h
Qt-Clion/DAY01-signals-and-slots/4ChangeLab/: changelab.h  main.cpp
Qt-Clion/DAY01/2MyWidget/: CMakeLists.txt
Qt-Clion/DAY01/4ChangeLab/: CMakeLists.txt  changelab.cpp
Qt-Clion/DAY02-Layout managers and dialogs/1ChangeLab/: changelab.cpp
Qt-Clion/DAY02-Layout managers and dialogs/2Layout/: CMakeLists.txt  mylayout.cpp  mylayout.h
Qt-Clion/DAY02-Layout managers and dialogs/3MultiLayout/: main.cpp
Qt-Clion/DAY02-Layout managers and dialogs/5Login/: CMakeLists.txt  login.cpp
Qt-Clion/DAY02-Layout managers and dialogs/6OtherDialog/: otherdialog.cpp
Qt-Clion/DAY02-Layout managers and dialogs/7ChangeLab/: main.cpp
Qt-Clion/DAY02-Layout-managers-and-dialogs/1ChangeLab/: CMakeLists.txt  changelab.h
Qt-Clion/DAY02-Layout-managers-and-dialogs/2Layout/: main.cpp
Qt-Clion/DAY02-Layout-managers-and-dialogs/2Layout-work/: CMakeLists.txt  main.cpp
Qt-Clion/DAY02-Layout-managers-and-dialogs/3MultiLayout/: CMakeLists.txt
Qt-Clion/DAY02-Layout-managers-and-dialogs/4ChangeLab/: main.cpp
Qt-Clion/DAY02-Layout-managers-and-dialogs/5Login/: login.h  main.cpp  mywidget.cpp
Qt-Clion/DAY02-Layout-managers-and-dialogs/6OtherDialog/: otherdialog.cpp
Qt-Clion/DAY02-Layout-managers-and-dialogs/7ChangeLab/: main.cpp
Qt-Clion/DAY02-Layout-managers-and-dialogs/8WidgetItem/: CMakeLists.txt  widgetitem.cpp
Qt-Clion/DAY02/4ChangeLab/: changelab.cpp
Qt-Clion/DAY02/5Login/: login.cpp
Qt-Clion/DAY02/6OtherDialog/: CMakeLists.txt  otherdialog.h
Qt-Clion/DAY02/6OtherDialog-Work/: otherdialog.cpp
Qt-Clion/DAY02/7ChangeLab/: CMakeLists.txt  changelab.cpp
Qt-Clion/DAY03-Widget and QT Designer/2WidgetDesigner/: CMakeLists.txt
Qt-Clion/DAY03-Widget-and-QT-Designer/1WidgetItem/: CMakeLists.txt  widgetitem.h
Qt-Clion/DAY03-Widget-and-QT-Designer/2WidgetDesigner/: CMakeLists.txt  widgetdesigner.cpp
Qt-Clion/DAY03-Widget-and-QT-Designer/4Calculate/: CMakeLists.txt  mainwindow.h  mainwindow.ui
Qt-Clion/DAY03-Widget-and-QT-Designer/5MyText/: find.cpp  find.h  find.ui  main.cpp  mainwindow.ui  mytext.cpp  mytext.h  mytext.ui  relay.cpp  relay.h  relay.ui
Qt-Clion/DAY03/1WidgetItem/: widgetitem.cpp
Qt-Clion/DAY03/2WidgetDesigner/: mainwindow.cpp  mainwindow.h  widgetdesigner.ui
Qt-Clion/DAY03/3ChangeLab/: changelab.cpp
Qt-Clion/DAY03/4Calculate/: CMakeLists.txt  calculate.cpp  mainwindow.cpp
Qt-Clion/DAY03/5MyText/: CMakeLists.txt
Qt-Clion/DAY10/2MusicPlayer/: musicplayer.h
Qt-Clion/DAY10/3MyMediaPlayer/: main.cpp
Qt-Clion/DAY11/1MyAudio/: myaudio.cpp  myaudio.h
Qt-Clion/DAY11/3MyMplayer/: Makefile  ui_mymplayer.h
Qt-Clion/DAY11/5MyCamera/: mycamera.ui
Qt-Clion/DAY12/: rfid_getid.c
Qt-Clion/DAY12/1MyVideoPlayer/: myvideoplayer.cpp  myvideoplayer.h  myvideoplayer.ui  myvideowidget.cpp  myvideowidget.h
Qt-Clion/DAY12/2MyCamera/: mycamera.cpp  mycamera.h  mycamera.ui
Qt-Clion/DAY12/3MyThreadCamera/: camerathread.cpp  camerathread.h
Qt-Clion/DAY13/1MyProcessCamera/: myprocesscamera.cpp  myprocesscamera.ui
Qt-Clion/DAY13/2MyRfid/: main.cpp  rfidthread.h
Qt-Clion/DAY13/3MySerial/: CMakeLists.txt  myserial.cpp  myserial.h  myserial.ui
Qt-Clion/DAY4/1MyText/: mytext.cpp  mytext.ui  qrc.qrc
Qt-Clion/DAY4/2MyCalculate/: CMakeLists.txt  calculate.cpp  calculate.ui  main.cpp
Qt-Clion/DAY4/3MyPic/: CMakeLists.txt  mypic.cpp  mypic.h
Qt-Clion/DAY4/build-mytest-Desktop_Qt_5_14_2_MinGW_64_bit-Release/: CMakeCache.txt  Makefile  cmake_install.cmake  mytest.cbp
Qt-Clion/DAY5-proesss/1ShowPic/: showpic.cpp
Qt-Clion/DAY5-proesss/2MyText/: find.ui  mytext.cpp  mytext.ui  replace.h
Qt-Clion/DAY5-proesss/3GetTime/: gettime.cpp  main.cpp
Qt-Clion/DAY5-proesss/6MyProcess/: CMakeLists.txt  myprocess.cpp  myprocess.h  newthread.cpp  newthread.h
Qt-Clion/DAY5/1ShowPic/: CMakeLists.txt  (+1 more)
Qt-Clion/GitGO/: CMakeLists.txt  myprocess.cpp  myprocess.h
Qt-Clion/untitled/: CMakeLists.txt
Qt-Qtcreate/DAY12/: camera_test.c  serial_test.c
Qt-Qtcreate/DAY8-highclass/: sqlite_test.c
SerialDemo/: CMakeLists.txt  mainwindow.cpp
Weather/: CMakeLists.txt  README.md  widget.h
build-Snake-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_SnakeDlg.h
build-Snake-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/debug/: moc_SnakeDlg.cpp  qrc_SnakePics.cpp
day04/1MyText/: find.cpp
day04/2MyCalculate/: 2MyCalculate.pro  mycalculate.cpp
day04/3MyPic/: main.cpp
day05/1ShowPic/: 1ShowPic.pro
day05/2MyText/: find.h
day05/6MyProcess/: 6MyProcess.pro  myprocess.h  myprocess.ui
day05/7MyThread/: mythread.cpp  mythread.ui  newthread.cpp
day05/8FileDownload/: filedownload.cpp  filedownload.h  filedownload.ui
(+394 files in other folders)
